# ecommerce-python

./: config.sh
inventory_service/api/: models.py  serializers.py  urls.py  views.py
inventory_service/inventory_service/: asgi.py  settings.py  urls.py  wsgi.py
order_service/: db.sqlite3  service-config.sh
order_service/api/: models.py  serializers.py  urls.py  views.py
order_service/api/migrations/: 0001_initial.py
order_service/order_service/: settings.py  urls.py
product_service/: MANIFEST.in  service-config.sh  setup.cfg
product_service/api/: models.py  serializers.py  urls.py  views.py
product_service/api/migrations/: 0001_initial.py
product_service/product_service/: settings.py  urls.py
