[metadata]
name=product-service
version=1.0.0
author=Victor Kipruto Kosgei
author_email=victorkosgeikrt@gmail.com
maintainer=Victor Kipruto Kosgei
maintainer_email=victorkosgeikrt@gmail.com
description=Product service for an ecommerce website
long_description=file:README.md
url=https://www.krtbit.com
license=https://www.krtbit.com/licenses
keywords=ecommerce, product, service
classifiers = 
    Framework::Django
    Intended Audience:: Developers
    Programming Language::Python::3
    Topic::Software Development::Libraries::Python

[options]
include_package_data=true
packages=find:
